# sleet

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN-MIRROR.md  DESIGN.md  LICENSE  README.md  TESTS.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
benches/: coordination.rs
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  getting-started.md  mirroring.md  operations.md  releasing.md  rust-api.md
examples/: db.toml  fleet.toml  sleet.toml
rfcs/: 0001-design.md  0002-mirroring.md
schema/: cli.schema.json  config.schema.json  db-edit.schema.json  db-list.schema.json  heartbeat.schema.json  status.schema.json  validate.schema.json  verify-record.schema.json
scripts/: minio.sh  test-linux.sh
specs/: coordination-mbt.fizz  coordination-mbt.json  coordination.fizz  coordination.json  mirror-expiry.cfg  mirror-mbt.fizz  mirror-race-sim.cfg  mirror-race.fizz  mirror-sim.cfg  mirror.fizz
src/: api.rs  config.rs  daemon.rs  heartbeat.rs  lib.rs  main.rs  ops.rs  placement.rs  registry.rs  render.rs  response.rs  root.rs  services.rs  spec.rs  store.rs  testing.rs
src/mirror/: copier.rs  layout.rs  mod.rs  pass.rs  prune.rs  restore.rs  verify.rs
tests/: api.rs  chaos.rs  cli.rs  cluster.rs  config.rs  corpus.rs  dst.rs  fleet.rs  gcs.rs  install.sh  mirror.rs  perf.rs  props.proptest-regressions  props.rs  s3.rs  schema_sync.rs  schemas.rs  spec.rs  system.rs
tests/cmd/: db_add.stdout  db_add.toml  db_list.stdout  db_list.toml  db_remove.stderr  db_remove.stdout  db_remove.toml  help.stdout  help.toml  (+54 more)
(+18 files in other folders)
