[package]
name = "sleet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
humantime = "2.3.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
url = "2.5.8"

[dev-dependencies]
toml = "1.1.2"
trycmd = "1.2.0"
