[package]
name = "sleet"
version = "0.1.0"
edition = "2024"
description = "A fleet manager for SlateDB databases"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
bytes = "1.12.0"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
humantime = "2.3.0"
object_store = { version = "0.14", features = ["aws", "gcp", "azure", "http"] }
percent-encoding = "2.3.2"
schemars = { version = "1.2.1", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
slatedb = { version = "0.14.1", features = ["aws", "gcp", "azure", "snappy", "zlib", "lz4", "zstd"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
uuid = "1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
criterion = "0.8.2"
fizzbee-mbt = "0.1.1"
jsonschema = "0.46.8"
proptest = "1.11.0"
tempfile = "3.27.0"
trycmd = "1.2.0"

[[bench]]
name = "coordination"
harness = false
